--- a/src/osyka_elevate.styl
+++ b/src/osyka_elevate.styl
@@ -1,7 +1,11 @@
-:root
-	--OsykaElevateL0 0
-	--OsykaElevateL1 1
-	--OsykaElevateL2 3
-	--OsykaElevateL3 6 
-	--osykaelevatel4 8
-	--OsykaElevateL5 12
+// Copyright (c) 2024 Osyah
+// SPDX-License-Identifier: MIT
+
+OsykaElevate = {
+	l0: 0,
+	l1: 1,
+	l2: 3,
+	l3: 6 ,
+	l4: 8,
+	l5: 12,
+}
