--- a/src/osyka_shape.styl
+++ b/src/osyka_shape.styl
@@ -1,3 +1,6 @@
+// Copyright (c) 2024 Osyah
+// SPDX-License-Identifier: MIT
+
 OsykaShapeDict = {
 	none: var(--OsykaShape_none),
 	xs: var(--OsykaShape_xs),
