osyka_element: config -> handle, add docs

--- a/src/osyka_element.styl
+++ b/src/osyka_element.styl
@@ -1,10 +1,13 @@
 // Copyright (c) 2024 Osyah
 // SPDX-License-Identifier: MIT
 
+@import './osyka_font.styl'
+
 .OsykaElement
 	box-sizing border-box
 	margin unset
 	padding unset
-	color unset
+	color inherit
 	background-color unset
 	border unset
+	OsykaFontApply(bodyMedium)
